# zlftm

./: 1.테이블생성.sql  2.직원추가.sql  2일차과제 1 .html  3.이름연봉조회.sql  4.Frontend연봉조회.sql  5.PM연봉인상확인.sql  6.Backend연봉인상.sql  7.민혁삭제.sql  8.직책별평균연봉.sql  Ch04_task(code).ipynb  Ch04_task.ipynb  Ch05_task.ipynb  Ch14_task.ipynb  Ch17_task.ipynb  Ch21_task.ipynb  Chaper0913_task .ipynb  Chaper1416_task.ipynb  Chapter0508_과제.ipynb  Chapter1720_task.ipynb  DB_8 과제.PY  README.md  app.py  chapter01_06.ipynb  chapter07_13.ipynb  day1_필수과제_설문조사양식.html  day4_필수과제_1.mwb  day4_필수과제_2.sql  index.html  join.css  join.html  level1.ipynb  level2..ipynb  level2.ipynb  level3..ipynb  level3.ipynb  profile.html  task_1.ipynb  task_2.ipynb  몬스터잡기 게임.html
13알차/: main.py  pyproject.toml
13알차/config/: settings.py
13알차/restaurants/: serializers.py  urls.py
13알차/reviews/: urls.py
13알차/reviews/migrations/: 0002_initial.py
13알차/users/: models.py  serializers.py  tests.py  urls.py  views.py
15일차/: pyproject.toml
15일차/config/: models.py  urls.py
15일차/config/settings/: __init__.py  base.py  local.py  prod.py
15일차/restaurants/: tests.py  views.py
15일차/reviews/: serializers.py  tests.py  views.py
15일차/users/: models.py  tests.py  urls.py
15일차/users/migrations/: 0002_user_is_active_user_is_staff.py
3일차/: db.sqlite3
8일차/: db.sqlite3  pyproject.toml
8일차/config/: settings.py  urls.py
8일차/static/css/: pagination.css
8일차/templates/: base.html  todo_form.html  todo_info.html  todo_list.html
8일차/templates/registration/: base.html  login.html  signup.html  signup_done.html  verify_failed.html  verify_success.html
8일차/todo/: cb_views.py  models.py  urls.py  views.py
8일차/todo/migrations/: 0001_initial.py
8일차/users/: cb_views.py  forms.py  models.py  urls.py
8일차/users/migrations/: 0001_initial.py
8일차/utils/: email.py
FastAPI 1일차/: main.py  pyproject.toml
FastAPI 1일차/app/models/: users.py
FastAPI 1일차/app/schemas/: users.py
oz/blog/: db.sqlite3  pyproject.toml
oz/blog/blog/: admin.py  models.py  views.py
oz/blog/config/: settings.py  urls.py
oz/blog/templates/: blog_datail.html  blog_list.html
(+122 files in other folders)
