[project]
name = "django-todo-list-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-cleanup>=9.0.0",
    "django-extension>=0.1.0",
    "django-extensions>=4.1",
    "django-summernote>=0.8.20.0",
    "ipython>=9.4.0",
    "pillow>=11.3.0",
]
